--- a/src/generators/swift/templates/TypewriterUtils.swift.hbs
+++ b/src/generators/swift/templates/TypewriterUtils.swift.hbs
@@ -29,7 +29,7 @@ class TypewriterUtils {
         let typewriterContext = [
             "typewriter": [
                 "language": "swift",
-                "version": "7.1.0"
+                "version": "{{typewriterVersion}}"
             ]
         ]
         
