make `userId` or `anonymousId` required for typescript type `TrackMessage`

--- a/src/generators/javascript/templates/segment.hbs
+++ b/src/generators/javascript/templates/segment.hbs
@@ -19,15 +19,18 @@ export type Callback = () => void
 import AnalyticsNode from 'analytics-node'
 export { AnalyticsNode }
 
+ /**
+ * At least one of userId or anonymousId must be included in any identify call.
+ */
+type Identity =
+  { userId: string | number; anonymousId?: string | number; } |
+  { anonymousId: string | number; userId?: string | number;  };
+
 /**
  * TrackMessage represents a message payload for an analytics `.track()` call.
  * See: https://segment.com/docs/spec/track/
  */
-export interface TrackMessage<PropertiesType> extends Options, Record<string, any> {
-  /** The ID for this user in your database. */
-  userId?: string | number
-  /** An ID to associated with the user when you don’t know who they are. */
-  anonymousId?: string | number
+export type TrackMessage<PropertiesType> = Options & Record<string, any> & Identity & {
   /** A dictionary of properties for the event. */
   properties?: PropertiesType
   /**
