--- a/src/languages/templates/typescript/node.hbs
+++ b/src/languages/templates/typescript/node.hbs
@@ -7,7 +7,7 @@
  * 
  * You can install it with: `npm install --save-dev ajv`.
  */
-import Ajv from 'ajv'
+import Ajv, { ErrorObject } from 'ajv'
 {{/if}}
 import AnalyticsNode from 'analytics-node'
 
@@ -125,7 +125,7 @@ export interface Context extends Record<string, any> {
 export type ViolationHandler = (
 	message: TrackMessage<Record<string, any>>,
 	{{!-- Swap the type definitions here so we don't want depend on ajv in production just for this type definition. --}}
-	violations: {{#if isDevelopment}}Ajv.ErrorObject{{else}}any{{/if}}[]
+	violations: {{#if isDevelopment}}ErrorObject{{else}}any{{/if}}[]
 ) => void
 
 /**
@@ -224,11 +224,9 @@ function validateAgainstSchema(
 	message: TrackMessage<Record<string, any>>,
 	schema: object
 ) {
-	const ajv = new Ajv({ schemaId: 'auto', allErrors: true, verbose: true })
-	ajv.addMetaSchema(require('ajv/lib/refs/json-schema-draft-06.json'))
-	ajv.addMetaSchema(require('ajv/lib/refs/json-schema-draft-04.json'))
+	const ajv = new Ajv({ allErrors: true, verbose: true })
 
-	if (!ajv.validate(schema, message) && ajv.errors) {
+	if (!ajv.validate(schema, message.properties) && ajv.errors) {
 		onViolation(message, ajv.errors)
 	}
 }
@@ -267,16 +265,16 @@ function withTypewriterContext<P, T extends TrackMessage<P>>(
 	message: TrackMessage<{{typeName}}>,
 	callback?: Callback
 ): void {
-	{{#if ../isDevelopment}}
-	const schema = {{{rawJSONSchema}}}
-	const event = withTypewriterContext({
+  const event = withTypewriterContext({
     ...message,
     event: '{{eventName}}',
     properties: {
       ...message.properties,
     },
   });
-	validateAgainstSchema(event, schema)
+	{{#if ../isDevelopment}}
+	const schema = {{{rawJSONSchema}}};
+	validateAgainstSchema(event, schema);
 	{{/if}}
 
 	const a = analytics()
