--- a/src/languages/templates/typescript/node.hbs
+++ b/src/languages/templates/typescript/node.hbs
@@ -9,7 +9,7 @@
  */
 import Ajv, { ErrorObject } from 'ajv'
 {{/if}}
-import AnalyticsNode from 'analytics-node'
+import { Analytics, Options } from '@segment/analytics-node'
 
 /**
 * At least one of userId or anonymousId must be included in any identify call.
@@ -39,93 +39,6 @@ export type TrackMessage<PropertiesType> = Options & Record<string, any> & Ident
 
 /** The callback exposed by analytics-node. */
 export type Callback = (err: Error) => void
-
-/** A dictionary of options. For example, enable or disable specific destinations for the call. */
-export interface Options {
-  /**
-   * Selectivly filter destinations. By default all destinations are enabled.
-   * https://segment.com/docs/sources/website/analytics.js/#selecting-destinations
-   */
-  integrations?: {
-    [key: string]: boolean | { [key: string]: any };
-  };
-  /**
-   * A dictionary of extra context to attach to the call.
-   * https://segment.com/docs/spec/common/#context
-   */
-  context?: Context;
-}
-
-/**
- * Context is a dictionary of extra information that provides useful context about a datapoint.
- * @see {@link https://segment.com/docs/spec/common/#context}
- */
-export interface Context extends Record<string, any> {
-  active?: boolean;
-  app?: {
-    name?: string;
-    version?: string;
-    build?: string;
-  };
-  campaign?: {
-    name?: string;
-    source?: string;
-    medium?: string;
-    term?: string;
-    content?: string;
-  };
-  device?: {
-    id?: string;
-    manufacturer?: string;
-    model?: string;
-    name?: string;
-    type?: string;
-    version?: string;
-  };
-  ip?: string;
-  locale?: string;
-  location?: {
-    city?: string;
-    country?: string;
-    latitude?: string;
-    longitude?: string;
-    region?: string;
-    speed?: string;
-  };
-  network?: {
-    bluetooth?: string;
-    carrier?: string;
-    cellular?: string;
-    wifi?: string;
-  };
-  os?: {
-    name?: string;
-    version?: string;
-  };
-  page?: {
-    hash?: string;
-    path?: string;
-    referrer?: string;
-    search?: string;
-    title?: string;
-    url?: string;
-  };
-  referrer?: {
-    type?: string;
-    name?: string;
-    url?: string;
-    link?: string;
-  };
-  screen?: {
-    density?: string;
-    height?: string;
-    width?: string;
-  };
-  timezone?: string;
-  groupId?: string;
-  traits?: Record<string, any>;
-  userAgent?: string;
-}
 
 export type ViolationHandler = (
 	message: TrackMessage<Record<string, any>>,
@@ -166,18 +79,18 @@ let onViolation = defaultValidationErrorHandler
 
 const missingAnalyticsNodeError = new Error(`You must set an analytics-node instance:
 
->	const SegmentAnalytics = require('analytics-node')
->	const { setTypewriterOptions } = require('./analytics')
+>	import { Analytics } = from '@segment/analytics-node'
+>	import { setTypewriterOptions } from './analytics'
 >
->	const analytics = new SegmentAnalytics('SEGMENT_WRITE_KEY')
+> const analytics = new Analytics({ writeKey: 'SEGMENT_WRITE_KEY' })
 >	setTypewriterOptions({
->		analytics: analytics,
+>		analytics: analytics
 >	})
 
-For more information on analytics-node, see: https://segment.com/docs/sources/server/node/quickstart/
+For more information on @segment/analytics-node, see: https://segment.com/docs/sources/server/node/quickstart/
 `)
 
-let analytics: () => AnalyticsNode | undefined = () => {
+let analytics: () => Analytics | undefined = () => {
 	throw missingAnalyticsNodeError
 }
 
@@ -186,7 +99,7 @@ export interface TypewriterOptions {
 	/**
 	 * Underlying analytics instance where analytics calls are forwarded on to.
 	 */
-	analytics: AnalyticsNode
+	analytics: Analytics
 	/**
 	 * Handler fired when if an event does not match its spec. This handler
 	 * does not fire in production mode, because it requires inlining the full
@@ -206,7 +119,7 @@ export interface TypewriterOptions {
  * @param {TypewriterOptions} options - the options to upsert
  *
  * @typedef {Object} TypewriterOptions
- * @property {AnalyticsNode} analytics - Underlying analytics instance where analytics
+ * @property {Analytics} analytics - Underlying analytics instance where analytics
  * 		calls are forwarded on to.
  * @property {Function} [onViolation] - Handler fired when if an event does not match its spec. This handler does not fire in
  * 		production mode, because it requires inlining the full JSON Schema spec for each event in your Tracking Plan. By default,
@@ -300,7 +213,7 @@ const clientAPI = {
 	 * @param {TypewriterOptions} options - the options to upsert
 	 *
 	 * @typedef {Object} TypewriterOptions
-	 * @property {AnalyticsNode} analytics - Underlying analytics instance where analytics
+	 * @property {Analytics} analytics - Underlying analytics instance where analytics
 	 * 		calls are forwarded on to.
 	 * @property {Function} [onViolation] - Handler fired when if an event does not match its spec. This handler does not fire in
 	 * 		production mode, because it requires inlining the full JSON Schema spec for each event in your Tracking Plan. By default,
