add build telemetry step

--- a/src/languages/templates/typescript/node.hbs
+++ b/src/languages/templates/typescript/node.hbs
@@ -12,7 +12,7 @@ import Ajv, { ErrorObject } from 'ajv'
 import { Analytics, TrackParams } from '@segment/analytics-node'
 
 /**
- * An ID associated with the user. Note: at least one of userId or anonymousId must be included.
+ * An ID associated with the user. Note: at least one of userId or anonymousId must be included!
  **/
 type Identity =
   | { userId: string; anonymousId?: string }
@@ -69,7 +69,7 @@ let onViolation = defaultValidationErrorHandler
 
 const missingAnalyticsNodeError = new Error(`You must set an analytics-node instance:
 
->	import { Analytics } = from '@segment/analytics-node'
+>	import { Analytics } from '@segment/analytics-node'
 >	import { setTypewriterOptions } from './analytics'
 >
 > const analytics = new Analytics({ writeKey: 'SEGMENT_WRITE_KEY' })
