--- a/src/languages/templates/typescript/node.hbs
+++ b/src/languages/templates/typescript/node.hbs
@@ -9,6 +9,11 @@
  */
 import Ajv, { ErrorObject } from 'ajv'
 {{/if}}
+
+/**
+ * You can install `@segment/analytics-node` by following instructions at: 
+ * https://segment.com/docs/connections/sources/catalog/libraries/server/node
+ */
 import { Analytics, TrackParams } from '@segment/analytics-node'
 
 /**
